--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Closetly - Seu guarda-roupa digital com IA. Digitalize peças, crie looks e vista-se de forma sustentável." />
-    <title>Closetly - Seu Guarda-Roupa Digital</title>
+    <meta name="description" content="UCloset - Seu guarda-roupa digital com IA. Digitalize peças, crie looks e vista-se de forma sustentável." />
+    <title>UCloset - Seu Guarda-Roupa Digital</title>
   </head>
   <body>
     <div id="root"></div>
